# BBS

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  main.c
client/: client_main.c
client/include/: client.h  config.h  interface.h  interpretor.h  listener.h  parser.h  ui.h
client/src/: client.c  interface.c  interpretor.c  listener.c  parser.c  ui.c
public/: CMakeLists.txt
public/include/: commander.h  config.h  constants.h  msg.h  public.h  utils.h
public/src/: commander.c  msg.c  public.c  utils.c
server/: server_main.c
server/include/: config.h  handler.h
server/src/: handler.c
